# fast-api-docker-poetry

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.local.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: __init__.py  main.py
app/config/: db.py  exception_config.py  exception_handlers.py  settings.py
app/controllers/: order_controller.py  system_controller.py  test_controller.py
app/models/: address.py  base.py  order.py  pageable.py
app/repository/: base_repository.py  order_repository.py
app/services/: order_service.py
app/utils/: async_db.py  async_session_maker.py  db.py  db_session.py
migrations/: env.py
migrations/versions/: 2023-04-29_2107_order_and_address.py
scripts/: docker-entrypoint.sh
tests/: conftest.py
tests/integrations/: test_order_controller.py  test_system_controller.py  test_test_controller.py
